# internal/api/v1/openapi_types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package v1
 
+const (
+	ApiKeyAuthScopes = "apiKeyAuth.Scopes"
+)
+
 // Defines values for OrderItemStatus.
 const (
 	CancelledByCompany OrderItemStatus = "cancelled_by_company"
@@ -17,6 +21,11 @@ const (
 	ReadyForShipping   OrderItemStatus = "ready_for_shipping"
 	Rejected           OrderItemStatus = "rejected"
 )
+
+// AdminGetOrdersResponse defines model for AdminGetOrdersResponse.
+type AdminGetOrdersResponse struct {
+	Data OrderItem `json:"data"`
+}
 
 // CreateOrderItem defines model for CreateOrderItem.
 type CreateOrderItem struct {
